<resources>
    <string name="app_name">TripApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="placeholder_date">Placeholder Date</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price (EUR)</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save_trip">Save Trip</string>
    <string name="add_trip_title">Add a new Trip</string>
    <string name="generic_exception_text">Something wrong happened!</string>
    <string name="error_required">This input is required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="sign_in_register">Already have an account? Sign in!</string>
    <string name="create_account">Create account</string>
    <string name="welcome_message">Welcome to TripApp!</string>
    <string name="register_welcome_message">Let\'s set up an account!</string>
    <string name="name">Name</string>
    <string name="password_verification">Password verification</string>
    <string name="error_wrong_credentials">Wrong email or password! Try again!</string>
    <string name="error_email_pattern">Please enter a valid email address!</string>
    <string name="error_password_verification">The password fields must be the same.</string>
    <string name="error_unfilled">Please fill all the fields!</string>
    <string name="email_taken">That email address is already taken!</string>
    <string name="error_form_generic">Make sure that you\'ve completed the form without errors!</string>
    <string name="logout">Logout</string>
    <string name="edit_trip">Edit a Trip</string>
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>
    <string name="what_is_this_exactly">What is this exactly?</string>
    <string name="app_description">This app helps you manage the trips you\'ve made throughout your entire life! You can: \n\n- Add info such as price, type or period of time for your trips\n- Rate every trip to see which one was your favorite one\n- Mark as favorite the trips you\'ve totally loved!</string>
    <string name="app_description_footer">This app was made as a project app for Google\'s Digital Workshop about Android Fundamentals!</string>
    <string name="contact_description">Got questions? You can send me an email, or contact me on LinkedIn or Twitter!\n\nMake sure to visit my GitHub repository for the source code of this amazing app.</string>
    <string name="contact_me">Contact me!</string>
    <string name="share_text">Hey! You should check this app called TripApp, it\'s awesome!</string>
    <string name="trip_long_click_title">What do you want to do?</string>
    <string name="trip_long_click_edit">Edit Trip</string>
    <string name="trip_long_click_delete">Delete Trip</string>
    <string name="trip_long_click_cancel">Cancel</string>
    <string name="delete_this_trip">Delete this trip</string>
    <string name="trip_delete_description">The trip will be permanently deleted</string>
    <string name="trip_delete_title">Are you sure you want to delete this trip?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, delete!</string>
    <string name="app_logo">App Logo</string>
    <string name="add_trip_button">Add Trip Button</string>
    <string name="email_icon">Email Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="github_logo">Github Logo</string>
    <string name="travel_background">Travel Background</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="contact_email">mailto:imgelu@gmail.com</string>
    <string name="contact_twitter">https://www.twitter.com/ImGelu</string>
    <string name="contact_linkedin">https://www.linkedin.com/in/imgelu</string>
    <string name="contact_github">https://www.github.com/ImGelu</string>
    <string name="the_weather_right_now">The weather right now!</string>
    <string name="degree_symbol">°</string>
    <string name="wind_unit">m/s</string>
    <string name="cloud_unit">%</string>
    <string name="humidity_unit">%</string>
    <string name="loading_weather">Loading Weather...</string>
    <string name="weather_error">We couldn\'t get the weather for this location. Please try again later!</string>
    <string name="no_permission">We cannot fetch the weather without permission to access the Internet :(</string>
</resources>