<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/trip_picture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_image_height"
                android:contentDescription="@string/travel_background"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/travel_bg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/trip_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_map_24" />

                <TextView
                    android:id="@+id/trip_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trip_name"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/destination"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_location_on_24"/>

                <View
                    android:id="@+id/view_trip_hr"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_height="@dimen/hr_size"
                    android:layout_below="@id/trip_destination"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:background="@color/gray_700" />

                <TextView
                    android:id="@+id/trip_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_trip_hr"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/price_eur"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_monetization_on_24"/>

                <TextView
                    android:id="@+id/trip_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trip_price"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/trip_type"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_category_24"/>

                <TextView
                    android:id="@+id/trip_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trip_type"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/start_date"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_today_24"/>

                <TextView
                    android:id="@+id/trip_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trip_start_date"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/end_date"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_outline_date_range_24"/>

                <TextView
                    android:id="@+id/trip_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/trip_end_date"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/rating"
                    android:textColor="?android:attr/textColorSecondary"
                    android:drawablePadding="@dimen/medium_margin"
                    app:drawableLeftCompat="@drawable/ic_baseline_star_outline_24"/>

                <ImageButton
                    android:id="@+id/button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/favorite_icon_height"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="markAsFavorite"
                    android:contentDescription="@string/favorite_button"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_star_outline_24"
                    android:tint="@color/yellow_500" />
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>